@@ -15,7 +15,7 @@ DWORD WINAPI GetBestRoute(DWORD,DWORD,PMIB_IPFORWARDROW);
 DWORD WINAPI GetFriendlyIfIndex(DWORD);
 DWORD WINAPI GetIcmpStatistics(PMIB_ICMP);
 DWORD WINAPI GetIfEntry(PMIB_IFROW);
-DWORD WINAPI GetIfTable(PMIB_IFTABLE);
+DWORD WINAPI GetIfTable(PMIB_IFTABLE,PULONG,BOOL);
 DWORD WINAPI GetInterfaceInfo(PIP_INTERFACE_INFO,PULONG);
 DWORD WINAPI GetIpAddrTable(PMIB_IPADDRTABLE,PULONG,BOOL);
 DWORD WINAPI GetIpForwardTable(PMIB_IPFORWARDTABLE,PULONG,BOOL);
