@@ -14,12 +14,6 @@
 #define MAX_INTERFACE_NAME_LEN 256
 #endif
 
-#define MIB_IF_OPER_STATUS_NON_OPERATIONAL 0
-#define MIB_IF_OPER_STATUS_UNREACHABLE 1
-#define MIB_IF_OPER_STATUS_DISCONNECTED 2
-#define MIB_IF_OPER_STATUS_CONNECTING 3
-#define MIB_IF_OPER_STATUS_CONNECTED 4
-
 #define MIB_IPNET_TYPE_OTHER 1
 #define MIB_IPNET_TYPE_INVALID 2
 #define MIB_IPNET_TYPE_DYNAMIC 3
